--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
             <div class="container">
                 <!-- About Section Heading-->
                 <p class="text-center"><img src="images/sunyata.png" width="200px"></p>
-                <p class="text-center"><b>หลวงพ่อสุญญตา</b><br/><b>พระพุทธโกฏิกาสุญญตา</b><br/>ภายในว่างเปล่า ภายนอกว่างเปล่า ทั้งภายนอกและภายในล้วน ว่างเปล่า<br/>ว่าง จากการคิดปรุงแต่งให้เป็นทุกข์</p>                
-                <p class="text-center text-uppercase 'text-white"><a href="#:8081" target="blank">CAM 1</a></p>
-
+                <p class="text-center"><b>หลวงพ่อสุญญตา</b><br/><a href="bdd/jatugotigasunyata.mp3"><b>พระพุทธจตุโกฏิกาสุญญตา</b></a><br/>ภายในว่างเปล่า ภายนอกว่างเปล่า ทั้งภายนอกและภายในล้วน ว่างเปล่า<br/>ว่าง จากการคิดปรุงแต่งให้เป็นทุกข์</p>                
+                <p class="text-center text-uppercase 'text-white"><a id="Earth" target="blank">WEBCAM</a></p>
                 <!-- Icon Divider-->
                 <!--div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
+                </div-->
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
@@ -120,11 +119,15 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <p>หลวงพ่อสุญญตา<br>ทุกข์ และ การดับทุกข์<br><a href="https://m.facebook.com/LUANGPORSUNYATA">FB: LUANGPORSUNYATA</a></p>
+                    <p><b>หลวงพ่อสุญญตา</b><br>เพียรฝึกให้ สุขง่าย ทุกข์ยาก<br/>มีความอยากเป็น ฉันทะ<br/>
+                        <a href="datath/payutto/p002.mp3">ตัณหา</a> <br/> ความอยาก ทำตามอารมณ์ความรู้สึก <br/>
+                        <a href="datath/payutto/p005.mp3">ฉันทะ</a> <br/> ความอยาก ที่ มีสติปัญญา มีเหตุผล <br/><br/>
+                        <a href="https://web.facebook.com/LUANGPORSUNYATA">FB: LUANGPORSUNYATA</a></p>
                 </div>
             </div>
         </section>
 	 <!-- Core theme JS-->
      <script src="js/scripts.js"></script>
+     <script>document.getElementById('Earth').href=''+window.location.origin+':8081';</script>
 </body>
 </html>
