--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
                     <div class="col-lg-4 ml-auto">
                     	<p class="lead">แนวทางการฝึกปฏิบัติ</p>
                     	<p>
-                    		<ul>
-                    			<li>ฝึกสติให้ไวด้วยการฝึกเจริญสติแบบต่างๆ อย่างต่อเนื่อง สม่ำเสมอ เช่น อานาปานสติ หมั่นรู้ลมหายใจเข้าออกตลอดเวลา ทำทุกครั้งที่นึกได้ มีสติรู้กายเคลื่อนไหว ลุก ยืน นั่ง เดิน นอน คู้ เหยียด หยิบ จับ ยก วาง ทำกิจกรรมต่างๆด้วยความเงียบ เป็นระเบียบเรียบร้อย เป็นต้น</li>
-                    			<li>ฝึกปฏิบัติธรรมในการงาน ถ้าสติยังไม่ไวพอก็สามารถ ตั้งใจมีสติรู้สภาวะธรรมที่เกิดขึ้นใน กาย ใจ เช่น ปวด เมื่อย ตรงไหน อยู่ไหม เห็น ได้ยิน ได้กลิ่น โดนลิ้น โดนตัว แล้ว คิดอะไร เป็นต้น</li>
-                    			<li>ศึกษาฝึกคิดแบบ โยนิโสมนสิการ ให้ชำนาญ</li>
-                    			<li>ฟังธรรมอย่างสม่ำเสมอ ศึกษาให้พอเข้าใจเรื่อง ขันธ์ ๕ อายตนะ ไตรลักษณ์ ปฏิจจสมุปปบาท</li>
-                    			<li>เมื่อฝึกจนมีสติไวรู้รูปนามแล้ว คือ มีสติรู้ว่าเมื่อมีการกระทบทางอายตนะมีอะไรเกิดที่กาย มีอะไรเกิดที่ใจ จากนั้นให้พิจารณาตามรู้ตามเห็นถึงความเป็นไตรลักษณ์ เห็นตามเป็นจริงบ่อยๆจิตก็จะเกิดความเบื่อหน่าย คลายกำหนัด สลัดคืน</li>
-                    			<li>
-                    			<a href="khun5/5buddhadasa.mp3"> ขันธ์ 5 พุทธทาส</a><br/>
-                    			<a href="khun5/5payuth1.mp3"> ขันธ์ 5-1 ปยุตโต</a>
-                    			<a href="khun5/5payuth2.mp3"> ขันธ์ 5-2 ปยุตโต</a>
-                    			<a href="khun5/5payuth3.mp3"> ขันธ์ 5-3 ปยุตโต</a><br/>
-                    			<a href="khun5/5luangpoo.mp3"> ขันธ์ 5 หลวงปู่เหรียญ</a><br/>
-                    			<a href="khun5/5plian.mp3"> ขันธ์ 5 หลวงปู่เปลี่ยน</a><br/>
-                    			<a href="khun5/5khemakun.mp3"> ขันธ์ 5 พระภาวนาเขมคุณ</a><br/>
-                    			<a href="khun5/5suchart.mp3"> ขันธ์ 5 พอจ สุชาติ</a><br/>
-                    			<a href="loop5/02-2-5.mp3"> ขันธ์ 5 พอจ ปัญญา</a><br/>
-                    		</li>
-                    		</ul>
+                    		<dl>
+                                <dd>ฝึกสติให้ไวด้วยการฝึกเจริญสติแบบต่างๆ อย่างต่อเนื่อง สม่ำเสมอ เช่น อานาปานสติ หมั่นรู้ลมหายใจเข้าออกตลอดเวลา ทำทุกครั้งที่นึกได้ มีสติรู้กายเคลื่อนไหว ลุก ยืน นั่ง เดิน นอน คู้ เหยียด หยิบ จับ ยก วาง ทำกิจกรรมต่างๆด้วยความเงียบ เป็นระเบียบเรียบร้อย เป็นต้น</dd>
+                                <dd>ฝึกปฏิบัติธรรมในการงาน ถ้าสติยังไม่ไวพอก็สามารถ ตั้งใจมีสติรู้สภาวะธรรมที่เกิดขึ้นใน กาย ใจ เช่น ปวด เมื่อย ตรงไหน อยู่ไหม เห็น ได้ยิน ได้กลิ่น โดนลิ้น โดนตัว แล้ว คิดอะไร เป็นต้น</dd>
+                                <dd>ศึกษาฝึกคิดแบบ โยนิโสมนสิการ ให้ชำนาญ</dd>
+                                <dd>ฟังธรรมอย่างสม่ำเสมอ ศึกษาให้พอเข้าใจเรื่อง ขันธ์ ๕ อายตนะ ไตรลักษณ์ ปฏิจจสมุปปบาท</dd>
+                                <dd>เมื่อฝึกจนมีสติไวรู้รูปนามแล้ว คือ มีสติรู้ว่าเมื่อมีการกระทบทางอายตนะมีอะไรเกิดที่กาย มีอะไรเกิดที่ใจ จากนั้นให้พิจารณาตามรู้ตามเห็นถึงความเป็นไตรลักษณ์ เห็นตามเป็นจริงบ่อยๆจิตก็จะเกิดความเบื่อหน่าย คลายกำหนัด สลัดคืน</dd>
+                                <dd>
+                                <a href="khun5/5buddhadasa.mp3"> ขันธ์ 5 พุทธทาส</a><br/>
+                                <a href="khun5/5payuth1.mp3"> ขันธ์ 5-1 ปยุตโต</a>
+                                <a href="khun5/5payuth2.mp3"> ขันธ์ 5-2 ปยุตโต</a>
+                                <a href="khun5/5payuth3.mp3"> ขันธ์ 5-3 ปยุตโต</a><br/>
+                                <a href="khun5/5luangpoo.mp3"> ขันธ์ 5 หลวงปู่เหรียญ</a><br/>
+                                <a href="khun5/5pddan.mp3"> ขันธ์ 5 หลวงปู่เปลี่ยน</a><br/>
+                                <a href="khun5/5khemakun.mp3"> ขันธ์ 5 พระภาวนาเขมคุณ</a><br/>
+                                <a href="khun5/5suchart.mp3"> ขันธ์ 5 พอจ สุชาติ</a><br/>
+                                <a href="loop5/02-2-5.mp3"> ขันธ์ 5 พอจ ปัญญา</a><br/>
+                            </dd>
+                            </dl>
                     	</p>
                     	
                     </div>
@@ -115,14 +115,30 @@
                     		<li><a href="pdf/sangkathan.pdf"> คำถวายสังฆทาน </a></li>
                     		<!--li><a href="pdf/712.pdf"> ๗ ตำนาน ๑๒ ตำนาน </a></li-->
                     	</ul>
+
+                        <dl>
+                            <dt>เพียรฝึกให้</dt>
+                            <dt> สุขง่าย ทุกข์ยาก มีความอยากเป็น ฉันทะ </dt>
+                                <dt> สุขง่าย </dt>
+                                    <dd> ฝึกอยู่กินแบบง่ายๆ เช่น ฝึกรักษาศีลแปดในวันพระ</dd>
+                                <dt> ทุกข์อยาก </dt>
+                                    <dd> ฝึกภาวนาสงบจิตใจ ฝึกสติให้ไว หมั่นฟังธรรมสร้างปัญญา </dd>
+                                <dt> มีความอยากเป็น ฉันทะ </dt>
+                                    <dd> คิดอยากทำอะไร อยากได้สิ่งใด ด้วยเหตุผล ทำตามเหตุปัจจัยที่ทำได้ให้ดีที่สุด </dd>
+                        </dl> 
+                        <dl>
+                            <dd><a href="datath/payutto/p002.mp3">ตัณหา</a> <br/> ความอยาก ทำตามอารมณ์ความรู้สึก </dd>
+                            <dd><a href="datath/payutto/p005.mp3">ฉันทะ</a> <br/> ความอยาก ที่ มีสติปัญญา มีเหตุผล </dd>
+                        </dl>
+
                     </div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <p><b>หลวงพ่อสุญญตา</b><br>เพียรฝึกให้ สุขง่าย ทุกข์ยาก<br/>มีความอยากเป็น ฉันทะ<br/>
-                        <a href="datath/payutto/p002.mp3">ตัณหา</a> <br/> ความอยาก ทำตามอารมณ์ความรู้สึก <br/>
-                        <a href="datath/payutto/p005.mp3">ฉันทะ</a> <br/> ความอยาก ที่ มีสติปัญญา มีเหตุผล <br/><br/>
-                        <a href="https://web.facebook.com/LUANGPORSUNYATA">FB: LUANGPORSUNYATA</a></p>
+                    <p><b>หลวงพ่อสุญญตา</b><br>เพียรฝึกให้ สุขง่าย ทุกข์ยาก<br/>มีความอยากเป็น ฉันทะ<br/><br/>
+                        <a href="https://web.facebook.com/LUANGPORSUNYATA">FB: LUANGPORSUNYATA</a><br/><br/>
+                        <a href="help.html">VOICEKIT HELP</a>
+                    </p>
                 </div>
             </div>
         </section>
