--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     	<p class="lead">แนวทางการฝึกปฏิบัติ</p>
                     	<p>
                     		<dl>
-                                <dd>ฝึกสติให้ไวด้วยการฝึกเจริญสติแบบต่างๆ อย่างต่อเนื่อง สม่ำเสมอ เช่น อานาปานสติ หมั่นรู้ลมหายใจเข้าออกตลอดเวลา ทำทุกครั้งที่นึกได้ มีสติรู้กายเคลื่อนไหว ลุก ยืน นั่ง เดิน นอน คู้ เหยียด หยิบ จับ ยก วาง ทำกิจกรรมต่างๆด้วยความเงียบ เป็นระเบียบเรียบร้อย เป็นต้น</dd>
+                                <dd>ฝึกสติให้ไวด้วยการฝึกเจริญสติแบบต่างๆ อย่างต่อเนื่อง สม่ำเสมอ เช่น อานาปานสติ หมั่นรู้ลมหายใจเข้าออกตลอดเวลา ทำทุกครั้งที่นึกได้ มีสติรู้กายเคลื่อนไหว ลุก ยืน นั่ง เดิน นอน คู้ เหยียด หยิบ จับ ยก วาง หยุด นิ่ง ปัสสาวะ อุจจาระ มีสติรู้ทันความคิด คิดดี คิดชั่ว ทำกิจกรรมต่างๆด้วยความเงียบ เป็นระเบียบเรียบร้อย เป็นต้น</dd>
                                 <dd>ฝึกปฏิบัติธรรมในการงาน ถ้าสติยังไม่ไวพอก็สามารถ ตั้งใจมีสติรู้สภาวะธรรมที่เกิดขึ้นใน กาย ใจ เช่น ปวด เมื่อย ตรงไหน อยู่ไหม เห็น ได้ยิน ได้กลิ่น โดนลิ้น โดนตัว แล้ว คิดอะไร เป็นต้น</dd>
                                 <dd>ศึกษาฝึกคิดแบบ โยนิโสมนสิการ ให้ชำนาญ</dd>
                                 <dd>ฟังธรรมอย่างสม่ำเสมอ ศึกษาให้พอเข้าใจเรื่อง ขันธ์ ๕ อายตนะ ไตรลักษณ์ ปฏิจจสมุปปบาท</dd>
