--- a/help.html
+++ b/help.html
@@ -41,8 +41,8 @@
                                 play 1 3 6 stage
                             </dd>
                             <dd>buddha dhamma - พุทธธรรม, play dhamma - ฟังธรรม, play sutra or speech - ฟังพระสูตร</dd>
-                            <dd>English chanting,
-                                Thai chanting, meditaion time, what time, what day, buddha day, zen story, please shutdown,
+                            <dd>English chanting, Thai chanting, 
+                                meditaion time - ระฆังดังทุก ๑๕ นาที, what time, what day, buddha day, zen story, please shutdown,
                             </dd>
                             <dd>
                                 red green blue yellow alpha light on, 
