--- a/help.html
+++ b/help.html
@@ -45,9 +45,11 @@
                                 meditaion time - ระฆังดังทุก ๑๕ นาที, what time, what day, buddha day, zen story, please shutdown,
                             </dd>
                             <dd>
-                                red green blue yellow alpha light on, 
-                                moring practice, 
-                                wise one or and alpha
+                                red green blue yellow (sound, alpha) light on
+                                (pure, breathing) alpha meditation
+                                moring practice
+                                wise one (alpha)
+                                play my dhamma
                             </dd>
                         </dl>
                      
