--- a/help.html
+++ b/help.html
@@ -51,6 +51,11 @@
                                 wise one (alpha)
                                 play my dhamma
                             </dd>
+                            <dd>
+                                International Code of Signals : 
+                                a Alfa b Bravo c Charlie d Delta e Echo f Foxtrot g Golf h Hotel i India j Juliet k Kilo l Lima m Mike n November o Oscar p Papa q Quebec r Romeo s Sierra t Tango u Uniform v Victor w Whiskey 
+                                x Xray y Yankee z Zulu
+                            </dd>
                         </dl>
                      
                 </div>  
