--- a/help.html
+++ b/help.html
@@ -15,10 +15,34 @@
     <div class="row">
                 <div class="col-lg-12">
                     <dl>
-                            <dt>VOICEKIT HELP, IF ELSE VERSION: words you can say,</dt>
+                            <dt>VOICEKIT HELP (please help), </dt>
+                            <dd>
+                                You have to start with words "anat ta"<br/>
+                                and then you can say<br/>
+                                repeat mode on off<br/>
+                                daily dependent origination<br/>
+                                buddha thinking<br/>
+                                nature truth chanting<br/>
+                                breathing chanting<br/>
+                                dependent origination chanting<br/>
+                                8 fold path Thai, 8 fold path English<br/>
+                                English chanting, Thai chanting<br/>
+                                meditaion time<br/> play radio<br/> 
+                                play mantra 1 2 3 4 5 6 or 10 15 20 30 40 50 minutes<br/>
+                                play 1 3 6 stage<br/>
+                                buddha dhamma, play dhamma, play sutra, my dhamma <br/>
+                                what time<, what day, buddha day, zen story<br/>
+                                red green blue yellow or sound and or alpha light on<br/>
+                                pure or breathing alpha meditation<br/>
+                                math meditation<br/>
+                                walking practice<br/>
+                                moring practice<br/>
+                                wise one and or alpha<br/>
+                                please shutdown or anat ta stop,
+                            </dd>
                             <dt>daily dependent origination</dt>
                             <dd>เล่นไฟล์เสียงอ่านพุทธธรรมเรื่อง ปฏิจจสมุปปบาทในชีวิตประจำวัน</dd>
-                            <dt>buddha thinking Thai</dt>
+                            <dt>buddha thinking</dt>
                             <dd>เล่นไฟล์เสียงอ่านพุทธธรรมเรื่อง โยนิโสมนสิการ</dd>
                             <dt>nature truth chanting - สวดธรรมนิยาม</dt>
                             <dt>breathing chanting - สวดอานาปานสติ</dt>
@@ -41,18 +65,10 @@
                                 play 1 3 6 stage
                             </dd>
                             <dd>buddha dhamma - พุทธธรรม, play dhamma - ฟังธรรม, play sutra or speech - ฟังพระสูตร</dd>
-                            <dd>English chanting, Thai chanting, 
-                                meditaion time - ระฆังดังทุก ๑๕ นาที, what time, what day, buddha day, zen story, please shutdown,
-                            </dd>
+                            <dd>meditaion time - ระฆังดังทุก ๑๕ นาที </dd>
+                            
                             <dd>
-                                red green blue yellow (sound, alpha) light on
-                                (pure, breathing) alpha meditation
-                                moring practice
-                                wise one (alpha)
-                                play my dhamma
-                            </dd>
-                            <dd>
-                                International Code of Signals : 
+                                International Code of Signals : <br/>
                                 a Alfa b Bravo c Charlie d Delta e Echo f Foxtrot g Golf h Hotel i India j Juliet k Kilo l Lima m Mike n November o Oscar p Papa q Quebec r Romeo s Sierra t Tango u Uniform v Victor w Whiskey 
                                 x Xray y Yankee z Zulu
                             </dd>
