--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                     		<li><a href="pdf/chantingbook.pdf"> หนังสือสวดมนต์ ฉบับบตัดต่อ</a></li>
                     		<li><a href="pdf/buddhadhamma.pdf"> พุทธธรรม </a></li>
                     		<li><a href="pdf/monpithee.pdf"> มนต์พิธี </a></li>
+                            <li><a href="../dataen/chanting/pdf/anapanasati-8fold.pdf"> anapanasati & 8 fold path </a></li>
+                            <li><a href="../dataen/chanting/pdf/EN_heart.pdf"> Heart Sutra </a></li>
                     		
                     		<!--li><a href="pdf/sukatochantingbook2016.pdf"> หนังสือสวดมนต์ วัดป่าสุคะโต 2016 </a></li>
                     		<li><a href="pdf/monpithee.pdf"> มนต์พิธี </a></li>
