--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
                             <dd><a href="datath/payutto/p002.mp3">ตัณหา</a> <br/> ความอยาก ทำตามอารมณ์ความรู้สึก </dd>
                             <dd><a href="datath/payutto/p005.mp3">ฉันทะ</a> <br/> ความอยาก ที่ มีสติปัญญา มีเหตุผล </dd>
                         </dl>
+                        <dl><dt>ห้องสมุด</dt></dl>
+                        <ul>
+                            <li><a href="../mars/plants/cells.mp4">เซลล์พืช</a></li>
+                            <li><a href="../mars/plants/light-sd.mp4">กระบวการสังเคราะห์แสง</a></li>
+                            <li><a href="../mars/plants/co2-sd.mp4">วัฏจักรคาร์บอน</a></li>
+                            <li><a href="../mars/plants/">ธาตุอาหาร</a></li>
+                            <li><a href="../mars/plants/">เมล็ด</a></li>
+                            <li><a href="../mars/plants/">ท่อน้ำ ท่ออาหาร</a></li>
+                        </ul>
 
                     </div>
                 </div>
