--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
                                 8 fold path Thai, 8 fold path English<br/>
                                 English chanting, Thai chanting<br/>
                                 meditaion time<br/> play radio<br/> 
-                                play mantra 1 2 3 4 5 6 or 10 15 20 30 40 50 minutes<br/>
+                                mantra 1 2 3 4 5 6 or 10 15 20 30 40 50 minutes<br/>
                                 play 1 3 6 stage<br/>
                                 buddha dhamma, play dhamma, play sutra, my dhamma <br/>
                                 what time<, what day, buddha day, zen story<br/>
