--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                             <li><a href="../mars/plants/cells.mp4">เซลล์พืช</a></li>
                             <li><a href="../mars/plants/light-sd.mp4">กระบวการสังเคราะห์แสง</a></li>
                             <li><a href="../mars/plants/co2-sd.mp4">วัฏจักรคาร์บอน</a></li>
-                            <li><a href="../mars/plants/">ธาตุอาหาร</a></li>
-                            <li><a href="../mars/plants/">เมล็ด</a></li>
-                            <li><a href="../mars/plants/">ท่อน้ำ ท่ออาหาร</a></li>
+                            <li><a href="../mars/plants/npk.mp4">ธาตุอาหาร</a></li>
+                            <li><a href="../mars/plants/seed-sd.mp4">เมล็ด</a></li>
+                            <li><a href="../mars/plants/water-sd.mp4">ท่อน้ำ ท่ออาหาร</a></li>
                         </ul>
 
                     </div>
