--- a/help.html
+++ b/help.html
@@ -31,7 +31,7 @@
                                 mantra 1 2 3 4 5 6 or 10 15 20 30 40 50 minutes<br/>
                                 play 1 3 6 stage<br/>
                                 buddha dhamma, play dhamma, play sutra, my dhamma <br/>
-                                what time<, what day, buddha day, zen story<br/>
+                                what time, what day, buddha day, zen story<br/>
                                 red green blue yellow or sound and or alpha light on<br/>
                                 pure or breathing alpha meditation<br/>
                                 math meditation<br/>
