--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="container">
                 <!-- About Section Heading-->
                 <p class="text-center"><img src="images/sunyata.png" width="200px"></p>
-                <p class="text-center"><b>หลวงพ่อสุญญตา</b><br/><a href="bdd/jatugotigasunyata.mp3"><b>พระพุทธจตุโกฏิกาสุญญตา</b></a><br/>ภายในว่างเปล่า ภายนอกว่างเปล่า ทั้งภายนอกและภายในล้วน ว่างเปล่า<br/>ว่าง จากการคิดปรุงแต่งให้เป็นทุกข์</p>                
+                <p class="text-center"><b>หลวงพ่อสุญญตา</b><br/><a href="bdd/jatugotigasunyata.mp3"><b>พระพุทธจตุโกฏิกาสุญญตา</b></a><br/>ภายในว่างเปล่า ภายนอกว่างเปล่า ทั้งภายนอกและภายในล้วน ว่างเปล่า<br/>ว่าง จากการคิดปรุงแต่งให้เป็นทุกข์</p> 
+                <p class="text-center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeRBWFMCXPCVsNpdqLSCcw2mYpjcAPxdWRFsJF6bDGAo-6JHA/viewform?usp=sf_link">ถวายความทุกข์ ออนไลน์</a></p>               
                 <p class="text-center text-uppercase 'text-white"><a id="Earth" target="blank">WEBCAM</a></p>
                 <!-- Icon Divider-->
                 <!--div class="divider-custom divider-light">
